--- a/systemain.html
+++ b/systemain.html
@@ -8,6 +8,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body ng-controller="PeticionesCtrl" class="bg-gray-100 min-h-screen">
+    <p>mensage para princpal y mostrar el github</p>
 <header class="bg-teal-600 text-white py-6 text-center">
     <img src="UTNC.png" alt="Logo UTNC" class="h-20 mx-auto mb-2 bg-white rounded-full object-contain" />
     <h1 class="text-2xl font-bold mb-1">UTNC PETICIONES DE MANTENIMIENTO</h1>
